// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formats array values in object properties 1`] = `
"<Foo
  object={
    Object {
      baz: Array [
        'thud',
      ],
    }
  }
/>"
`;

exports[`formats array values in object properties in children 1`] = `
"<Foo>
  <Bar
    key=\\"bar\\"
    object={
      Object {
        baz: Array [
          'thud',
        ],
      }
    }
  />
</Foo>"
`;

exports[`formats illegal spaces in property names 1`] = `
"<Foo
  \\"foo bar\\"=\\"baz\\"
/>"
`;

exports[`formats max depth 1`] = `
"<div>
  <div>
    <div>…</div>
    <div…>…</div>
    <br… />
    <br />
  </div>
</div>"
`;

exports[`formats multiline string properties 1`] = `
"<Foo
  multiline={
    \`foo␊
    bar\`
  }
/>"
`;

exports[`formats object properties 1`] = `
"<Foo
  object={
    Object {
      baz: 'thud',
    }
  }
/>"
`;

exports[`formats opaque children 1`] = `
"<div>
  {true}
  {-0}
  {Function {}}
  {
    Set {
      'foo',
    }
  }
</div>"
`;

exports[`formats properties and children 1`] = `
"<Foo
  foo=\\"bar\\"
>
  baz
</Foo>"
`;

exports[`formats react elements 1`] = `
"<HelloMessage⍟
  name=\\"John\\"
/>"
`;

exports[`formats rendered array values in object properties 1`] = `
"<Foo
  object={
    Object {
      baz: Array [
        'thud',
      ],
    }
  }
/>"
`;

exports[`formats rendered array values in object properties in children 1`] = `
"<Foo>
  <Bar
    object={
      Object {
        baz: Array [
          'thud',
        ],
      }
    }
  />
</Foo>"
`;

exports[`formats rendered illegal spaces in property names 1`] = `
"<Foo
  \\"foo bar\\"=\\"baz\\"
/>"
`;

exports[`formats rendered max depth 1`] = `
"<div>
  <div>
    <div>…</div>
    <div…>…</div>
    <br… />
    <br />
  </div>
</div>"
`;

exports[`formats rendered multiline string properties 1`] = `
"<Foo
  multiline={
    \`foo␊
    bar\`
  }
/>"
`;

exports[`formats rendered object properties 1`] = `
"<Foo
  object={
    Object {
      baz: 'thud',
    }
  }
/>"
`;

exports[`formats rendered properties and children 1`] = `
"<Foo
  foo=\\"bar\\"
>
  baz
</Foo>"
`;

exports[`formats rendered react elements 1`] = `
"<div>
  Hello 
  <mark>
    John
  </mark>
</div>"
`;

exports[`formats rendered string and number children 1`] = `
"<div>
  foo
  bar
  {42}
</div>"
`;

exports[`formats single line attribute values 1`] = `
"<Foo
  bool={true}
/>"
`;

exports[`formats string and number children 1`] = `
"<div>
  foo
  bar
  {42}
</div>"
`;
